projects/optic/src/__tests__/integration/__snapshots__/spec-push.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`optic spec push can push a spec to a repo 1`] = `
"Automatically adding the git sha git:COMMIT-HASH and branch gitbranch:master as tags 

Uploading spec for api at https://app.useoptic.com/organizations/org-id/apis/api-id with tags env:production, the-favorite-api, git:COMMIT-HASH, gitbranch:master
Succesfully uploaded spec to Optic. View the spec here http://localhost:3000/organizations/org-id/apis/api-id/specs/spec-id
"
`;

exports[`optic spec push does not automatically add git tags when not clean state 1`] = `
"Not automatically including any git tags because the current working directory has uncommited changes.

Uploading spec for api at https://app.useoptic.com/organizations/org-id/apis/api-id 
Succesfully uploaded spec to Optic. View the spec here http://localhost:3000/organizations/org-id/apis/api-id/specs/spec-id
"
`;

exports[`optic spec push requires x-optic-url 1`] = `
"/Users/aidancunniffe/Desktop/optic/projects/optic/node_modules/ts-node/src/index.ts:843
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
../../src/init.ts(46,42): error TS2345: Argument of type '{ args: string[]; isInCi: boolean; }' is not assignable to parameter of type 'string'.

    at createTSError (/Users/aidancunniffe/Desktop/optic/projects/optic/node_modules/ts-node/src/index.ts:843:12)
    at reportTSError (/Users/aidancunniffe/Desktop/optic/projects/optic/node_modules/ts-node/src/index.ts:847:19)
    at getOutput (/Users/aidancunniffe/Desktop/optic/projects/optic/node_modules/ts-node/src/index.ts:1057:36)
    at Object.compile (/Users/aidancunniffe/Desktop/optic/projects/optic/node_modules/ts-node/src/index.ts:1411:41)
    at Module.m._compile (/Users/aidancunniffe/Desktop/optic/projects/optic/node_modules/ts-node/src/index.ts:1596:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1203:10)
    at Object.require.extensions.<computed> [as .ts] (/Users/aidancunniffe/Desktop/optic/projects/optic/node_modules/ts-node/src/index.ts:1600:12)
    at Module.load (node:internal/modules/cjs/loader:1027:32)
    at Function.Module._load (node:internal/modules/cjs/loader:868:12)
    at Module.require (node:internal/modules/cjs/loader:1051:19) {
  diagnosticCodes: [ 2345 ]
}
"
`;
